# callie-caller

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.cloudrun  Dockerfile.cloudrun-full  Dockerfile.cloudrun-full-fixed  Dockerfile.prod  README.md  api.py  build.sh  call_log.txt  cloudrun.yml  config.env.template  configure-router-upnp.py  debug_audio.py  deploy-cloudrun-full.sh  deploy-cloudrun.sh  deploy-vm.sh  deploy.sh  docker-compose-static-ports.yml  docker-compose.debug.yml  docker-compose.prod.yml  docker-compose.yml  main-cloudrun-full-debug.py  main-cloudrun-full-fixed.py  main-cloudrun-full.py  main-cloudrun.py  main.py  package-lock.json  package.json  project_summary_for_llm.txt  pyproject.toml  requirements.txt  run-docker-with-secrets.sh  setup-static-ports.sh  start_debug.sh  startup-script.sh
.github/workflows/: ci-cd.yml
callie_caller/: __init__.py  _version.py
callie_caller/ai/: __init__.py  client.py  conversation.py  live_client.py  tools.py
callie_caller/audio/: transcriber.py
callie_caller/config/: __init__.py  firebase_service.py  settings.py
callie_caller/core/: __init__.py  agent.py  logging.py  logging_handler.py  multi_tenant_web.py  web_agent.py  web_api.py  websocket_manager.py
data/: example_api_contexts.json
docs/: multi-tenant-setup.md  pjsua2-refactoring.md  sip-30-second-drop-analysis.md  web-interface.md
scripts/: README.md  final_sip_call.py  make_real_call.py  migrate_to_multitenant.py  real_sip_call.py  sip_auth_call.py  sip_call_sippy.py  version.py  yealink_sip_call.py
src/ai/: client.py  (+3 more)
web/: run-web-ui.sh
(+35 files in other folders)
