[project]
name = "callie-caller"
version = "0.1.0"
description = ""
authors = [
    {name = "Troy Fortin",email = "troyjr4103@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "google-genai (==1.28.0)",
    "pyaudio (>=0.2.14,<0.3.0)",
    "websockets (>=15.0.1,<16.0.0)",
    "uvicorn (>=0.35.0,<0.36.0)",
    "fastapi (>=0.116.1,<0.117.0)",
    "pydantic (>=2.11.7,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
